# api/swagger.yaml
@@ -15,6 +15,12 @@ info:
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
 host: "localhost:8080"
 basePath: "/v2"
+responses:
+  UnauthorizedError:
+    description: Authentication information is missing or invalid
+    headers:
+      WWW_Authenticate:
+        type: string
 tags:
 - name: "TodoItems"
   description: "Everything about your TodoItems"
@@ -39,23 +45,27 @@ paths:
       - "TodoItems"
       summary: "Add a new todoItem "
       description: ""
-      operationId: "addTodoItem"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
+      operationId: "addTodoItem"      
       parameters:
       - in: "body"
         name: "body"
         description: "TodoItem object that needs to be added to the list"
-        required: true
+        required: true     
         schema:
           $ref: "#/definitions/body"
+      - name: authorization
+        in: header
+        description: an authorization header
+        required: true
+        type: string
+      security:
+      - BasicAuth: []
       responses:
         405:
           description: "Invalid input"
-      security:
-      - BasicAuth: []
+        401:
+          $ref: "#/responses/UnauthorizedError"
+      
       x-swagger-router-controller: "TodoItems"
   /todoitems/findByStatus:
     get:
@@ -81,6 +91,11 @@ paths:
           - "available"
           - "pending"
         collectionFormat: "multi"
+      - name: authorization
+        in: header
+        description: an authorization header
+        required: true
+        type: string
       responses:
         200:
           description: "successful operation"
@@ -90,6 +105,8 @@ paths:
               $ref: "#/definitions/inline_response_200"
         400:
           description: "Invalid status value"
+        401:
+          $ref: "#/responses/UnauthorizedError"
       security:
       - BasicAuth: []
       x-swagger-router-controller: "TodoItems"
@@ -97,9 +114,9 @@ paths:
     get:
       tags:
       - "TodoItems"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
-      operationId: "getPetById"
+      summary: "Find TodoItem by ID"
+      description: "Returns a single todoitem"
+      operationId: "getTodoItemById"
       consumes:
       - "application/json"
       produces:
@@ -108,10 +125,15 @@ paths:
       parameters:
       - name: "todoItemId"
         in: "path"
-        description: "ID of pet to return"
+        description: "ID of todoitem to return"
         required: true
         type: "integer"
         format: "int64"
+      - name: authorization
+        in: header
+        description: an authorization header
+        required: true
+        type: string
       responses:
         200:
           description: "successful operation"
@@ -121,6 +143,8 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "TodoItem not found"
+        401:
+          $ref: "#/responses/UnauthorizedError"
       security:
       - BasicAuth: []
       x-swagger-router-controller: "TodoItems"
@@ -129,7 +153,7 @@ paths:
       - "TodoItems"
       summary: "Updates a todoitem in the list"
       description: ""
-      operationId: "updateTodoWithForm"
+      operationId: "updateTodowithId"
       consumes:
       - "application/x-www-form-urlencoded"
       produces:
@@ -151,9 +175,16 @@ paths:
         description: "Updated status of the todoItem"
         required: false
         type: "string"
+      - name: authorization
+        in: header
+        description: an authorization header
+        required: true
+        type: string
       responses:
         405:
           description: "Invalid input"
+        401:
+          $ref: "#/responses/UnauthorizedError"
       security:
       - BasicAuth: []
       x-swagger-router-controller: "TodoItems"
@@ -167,22 +198,25 @@ paths:
       - "application/json"
       produces:
       - "application/json"
-      parameters:
-      - name: "api_key"
-        in: "header"
-        required: false
-        type: "string"
+      parameters:      
       - name: "todoItemId"
         in: "path"
         description: "TodoItem id to delete"
         required: true
         type: "integer"
         format: "int64"
+      - name: authorization
+        in: header
+        description: an authorization header
+        required: true
+        type: string
       responses:
         400:
           description: "Invalid ID supplied"
         404:
           description: "TodoItem not found"
+        401:
+          $ref: "#/responses/UnauthorizedError"
       security:
       - BasicAuth: []
       x-swagger-router-controller: "TodoItems"
